@@ -1,9 +1,10 @@
 Changes in openair 0.5-9 [2011-09-08]
 =====================================
 
+*	allow model performance change to be considered in TaylorDiagram
 *	update to windRose and pollutionRose
         stat related annotation
-*       update to polarPlot, ploarFreq and polarAnnulus 
+*       update to polarPlot, ploarFreq and polarAnnulus
         improved ... handling
 
 Changes in openair 0.5-8 [2011-09-02]
